Cannot clean install. ProductionLoader returns empty List.